# ishocon2-rust

./: .env  .gitignore  Cargo.toml  Makefile  README.md
src/: candidate.rs  helpers.rs  main.rs  newrelic_util.rs  user.rs  vote.rs
templates/: candidate.hbs  candidate.html  index.hbs  index.html  layout.hbs  layout.html  political_party.hbs  political_party.html  vote.hbs  vote.html
