[package]
name = "ishocon2-rust"
version = "0.1.0"
authors = ["hiratasa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "*"
handlebars = { version = "3.4", features = ["dir_source"] }
serde = { version = "1.0", "features" = ["derive"] }